TestSuite/errors/err0096.pas

begin
var i : integer;
for i := 1 to 10 do
 i := i+1;
end.